# nut

./: CHANGELOG.md  Cargo.toml  IMPLEMENTATION_NOTES.md  LICENSE.md  README.md  TUTORIALS.md  UI_README.md  release-plz.toml
.github/: dependabot.yml
.github/agents/: nut.agent.md
.github/workflows/: auto-fix.yml  clippy.yml  codeql.yml  formatting.yml  release.yml  test.yml
benches/: status_bench.rs
src/: config.rs  dirs.rs  enter.rs  error.rs  gh.rs  git.rs  lib.rs  main.rs  processes.rs  ui_main.rs  validation.rs  workspace.rs
src/git/: apply.rs  clone.rs  command.rs  mod.rs  repository.rs  status.rs
src/ui/: mod.rs
tests/: README.md  fake_github_tests.rs  integration_tests.rs
