[package]
name = "nut"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
directories = "6.0.0"
futures-util = "0.3.31"
octocrab = { version = "0.48.0", features = ["stream"] }
tokio = { version = "1.48.0", features = ["full", "tokio-macros"] }
ulid = "1.2.1"
walkdir = "2.5.0"
