[package]
name = "nut-workspace"
version = "0.4.1"
edition = "2024"
description = "A workspace manager for working with multiple GitHub repositories simultaneously."
license-file = "LICENSE.md"
readme = "README.md"
repository = "https://github.com/stefreak/nut"
homepage = "https://github.com/stefreak/nut"
categories = ["command-line-utilities", "development-tools"]
exclude = ["/tests", "/.github", "/target", ".gitignore"]

[[bin]]
name = "nut"
path = "src/main.rs"

[badges]
# The `maintenance` table indicates the status of the maintenance of
# the crate. This may be used by a registry, but is currently not
# used by crates.io. See https://github.com/rust-lang/crates.io/issues/2437
# and https://github.com/rust-lang/crates.io/issues/2438 for more details.
#
# The `status` field is required. Available options are:
# - `actively-developed`: New features are being added and bugs are being fixed.
# - `passively-maintained`: There are no plans for new features, but the maintainer intends to
#   respond to issues that get filed.
# - `as-is`: The crate is feature complete, the maintainer does not intend to continue working on
#   it or providing support, but it works for the purposes it was designed for.
# - `experimental`: The author wants to share it with the community but is not intending to meet
#   anyone's particular use case.
# - `looking-for-maintainer`: The current maintainer would like to transfer the crate to someone
#   else.
# - `deprecated`: The maintainer does not recommend using this crate (the description of the crate
#   can describe why, there could be a better solution available or there could be problems with
#   the crate that the author does not want to fix).
# - `none`: Displays no badge on crates.io, since the maintainer has not chosen to specify
#   their intentions, potential crate users will need to investigate on their own.
maintenance = { status = "experimental" }

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive", "string"] }
config = "0.15"
directories = "6.0.0"
futures-util = "0.3.31"
miette = { version = "7", features = ["fancy"] }
octocrab = { version = "0.49.5", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.49.0", features = ["full", "tokio-macros"] }
ulid = "1.2.1"
walkdir = "2.5.0"
